--- a/refresca.html
+++ b/refresca.html
@@ -8,7 +8,6 @@
 	</head>
 	 
 	<body>
-	 
 		<h1>Teste de Monitoramento</h1>
 		<p>Dados de NOAA - USA</p>
 		<p><i>Esta página refresca a cada 10 segundos</i></p>
@@ -22,19 +21,24 @@
 
 		<div>
 		<center>
-			<img src="http://www.hamqsl.com/solarsun.php">
+			<img src="http://www.hamqsl.com/solarsun.php" style="">
 			<img src="http://www.hamqsl.com/solarsystem.php">
 			<img src="http://www.hamqsl.com/solarglobe.php">
+			<img src="http://www.hamqsl.com/moonglobe.php">
+			<img src="http://www.hamqsl.com/solarpich.php">
+			<img src="http://www.hamqsl.com/solarpic.php">
+			<img src="http://www.hamqsl.com/solarsmall.php">
 			<a href="http://www.hamqsl.com/solar.html" title="Click to add Solar-Terrestrial Data to your website!"><img src="http://www.hamqsl.com/solarmuf.php"></a>
-			 <img src="http://services.swpc.noaa.gov/images/animations/drap_global/latest.png" height="240" width="320"> <br>
-			 <img src="http://services.swpc.noaa.gov/images/planetary-k-index.gif" height="240" width="320"> <br>
-	 		 <img src="http://services.swpc.noaa.gov/images/goes-magnetometer.gif" height="240" width="320"> <br>
-			 <img src="http://services.swpc.noaa.gov/images/solar-cycle-sunspot-number.gif" height="240" width="320"> <br>
-			 <img src="http://services.swpc.noaa.gov/images/goes-proton-flux.gif?time=1452536162000" height="240" width="320"> <br>
-			 <img src="http://legacy-www.swpc.noaa.gov/rt_plots/Bou_12h.png" height="240" width="320"> <br>
+			<img src="http://services.swpc.noaa.gov/images/animations/drap_global/latest.png" height="240" width="320"> <br>
+			<img src="http://services.swpc.noaa.gov/images/planetary-k-index.gif" height="240" width="320"> <br>
+	 		<img src="http://services.swpc.noaa.gov/images/goes-magnetometer.gif" height="240" width="320"> <br>
+			<img src="http://services.swpc.noaa.gov/images/solar-cycle-sunspot-number.gif" height="240" width="320"> <br>
+			<img src="http://services.swpc.noaa.gov/images/goes-proton-flux.gif?time=1452536162000" height="240" width="320"> <br>
+			<img src="http://legacy-www.swpc.noaa.gov/rt_plots/Bou_12h.png" height="240" width="320"> <br>
+			<img src="http://robot.hrdlog.net/graph.aspx?type=p&amp;time=25396930"> <br>
+			<img src="http://robot.hrdlog.net/map.aspx">
 		</center>
 		</div>
-
 	</body>
 
 </html>
