--- a/refresca.html
+++ b/refresca.html
@@ -5,6 +5,12 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="Refresh" content="10">
 		<title>R e f r e s c a</title>
+		<style>
+			body {
+				background: black;
+				color: yellow;
+			}
+		</style>
 	</head>
 	 
 	<body>
